--- a/shop.html
+++ b/shop.html
@@ -125,7 +125,7 @@
                 <div class="mobile-menu_logo text-center d-flex justify-content-center align-items-center"><a href=""><img src="assets/images/logo.png" alt=""></a></div>
               </div>
               <div class="col-3">
-                <div class="mobile-product_function d-flex align-items-center justify-content-end"><a class="function-icon icon_heart_alt" href="shop_wishlist.html"></a><a class="function-icon icon_bag_alt" href="shop_cart.html"></a></div>
+                <div class="mobile-product_function d-flex align-items-center justify-content-end"><a class="function-icon icon_heart_alt" href="shop_wishlist.html"></a><a class="function-icon fa fa-shopping-cart" href="shop_cart.html"></a></div>
               </div>
             </div>
           </div>
@@ -331,7 +331,7 @@
                           </div>
                           <div class="product-select">
                             <button class="add-to-wishlist round-icon-btn"> <i class="icon_heart_alt"></i></button>
-                            <button class="add-to-cart round-icon-btn">  <i class="icon_bag_alt"></i></button>
+                            <button class="add-to-cart round-icon-btn">  <i class="fa fa-shopping-cart"></i></button>
                             <button class="add-to-compare round-icon-btn"> <i class="fas fa-random"></i></button>
                             <button class="quickview round-icon-btn"> <i class="far fa-eye"></i></button>
                           </div>
@@ -364,7 +364,7 @@
                           </div>
                           <div class="product-select">
                             <button class="add-to-wishlist round-icon-btn"> <i class="icon_heart_alt"></i></button>
-                            <button class="add-to-cart round-icon-btn">  <i class="icon_bag_alt"></i></button>
+                            <button class="add-to-cart round-icon-btn">  <i class="fa fa-shopping-cart"></i></button>
                             <button class="add-to-compare round-icon-btn"> <i class="fas fa-random"></i></button>
                             <button class="quickview round-icon-btn"> <i class="far fa-eye"></i></button>
                           </div>
@@ -397,7 +397,7 @@
                           </div>
                           <div class="product-select">
                             <button class="add-to-wishlist round-icon-btn"> <i class="icon_heart_alt"></i></button>
-                            <button class="add-to-cart round-icon-btn">  <i class="icon_bag_alt"></i></button>
+                            <button class="add-to-cart round-icon-btn">  <i class="fa fa-shopping-cart"></i></button>
                             <button class="add-to-compare round-icon-btn"> <i class="fas fa-random"></i></button>
                             <button class="quickview round-icon-btn"> <i class="far fa-eye"></i></button>
                           </div>
@@ -428,7 +428,7 @@
                           </div>
                           <div class="product-select">
                             <button class="add-to-wishlist round-icon-btn"> <i class="icon_heart_alt"></i></button>
-                            <button class="add-to-cart round-icon-btn">  <i class="icon_bag_alt"></i></button>
+                            <button class="add-to-cart round-icon-btn">  <i class="fa fa-shopping-cart"></i></button>
                             <button class="add-to-compare round-icon-btn"> <i class="fas fa-random"></i></button>
                             <button class="quickview round-icon-btn"> <i class="far fa-eye"></i></button>
                           </div>
@@ -459,7 +459,7 @@
                           </div>
                           <div class="product-select">
                             <button class="add-to-wishlist round-icon-btn"> <i class="icon_heart_alt"></i></button>
-                            <button class="add-to-cart round-icon-btn">  <i class="icon_bag_alt"></i></button>
+                            <button class="add-to-cart round-icon-btn">  <i class="fa fa-shopping-cart"></i></button>
                             <button class="add-to-compare round-icon-btn"> <i class="fas fa-random"></i></button>
                             <button class="quickview round-icon-btn"> <i class="far fa-eye"></i></button>
                           </div>
@@ -490,7 +490,7 @@
                           </div>
                           <div class="product-select">
                             <button class="add-to-wishlist round-icon-btn"> <i class="icon_heart_alt"></i></button>
-                            <button class="add-to-cart round-icon-btn">  <i class="icon_bag_alt"></i></button>
+                            <button class="add-to-cart round-icon-btn">  <i class="fa fa-shopping-cart"></i></button>
                             <button class="add-to-compare round-icon-btn"> <i class="fas fa-random"></i></button>
                             <button class="quickview round-icon-btn"> <i class="far fa-eye"></i></button>
                           </div>
@@ -521,7 +521,7 @@
                           </div>
                           <div class="product-select">
                             <button class="add-to-wishlist round-icon-btn"> <i class="icon_heart_alt"></i></button>
-                            <button class="add-to-cart round-icon-btn">  <i class="icon_bag_alt"></i></button>
+                            <button class="add-to-cart round-icon-btn">  <i class="fa fa-shopping-cart"></i></button>
                             <button class="add-to-compare round-icon-btn"> <i class="fas fa-random"></i></button>
                             <button class="quickview round-icon-btn"> <i class="far fa-eye"></i></button>
                           </div>
@@ -552,7 +552,7 @@
                           </div>
                           <div class="product-select">
                             <button class="add-to-wishlist round-icon-btn"> <i class="icon_heart_alt"></i></button>
-                            <button class="add-to-cart round-icon-btn">  <i class="icon_bag_alt"></i></button>
+                            <button class="add-to-cart round-icon-btn">  <i class="fa fa-shopping-cart"></i></button>
                             <button class="add-to-compare round-icon-btn"> <i class="fas fa-random"></i></button>
                             <button class="quickview round-icon-btn"> <i class="far fa-eye"></i></button>
                           </div>
@@ -583,7 +583,7 @@
                           </div>
                           <div class="product-select">
                             <button class="add-to-wishlist round-icon-btn"> <i class="icon_heart_alt"></i></button>
-                            <button class="add-to-cart round-icon-btn">  <i class="icon_bag_alt"></i></button>
+                            <button class="add-to-cart round-icon-btn">  <i class="fa fa-shopping-cart"></i></button>
                             <button class="add-to-compare round-icon-btn"> <i class="fas fa-random"></i></button>
                             <button class="quickview round-icon-btn"> <i class="far fa-eye"></i></button>
                           </div>
@@ -614,7 +614,7 @@
                           </div>
                           <div class="product-select">
                             <button class="add-to-wishlist round-icon-btn"> <i class="icon_heart_alt"></i></button>
-                            <button class="add-to-cart round-icon-btn">  <i class="icon_bag_alt"></i></button>
+                            <button class="add-to-cart round-icon-btn">  <i class="fa fa-shopping-cart"></i></button>
                             <button class="add-to-compare round-icon-btn"> <i class="fas fa-random"></i></button>
                             <button class="quickview round-icon-btn"> <i class="far fa-eye"></i></button>
                           </div>
@@ -645,7 +645,7 @@
                           </div>
                           <div class="product-select">
                             <button class="add-to-wishlist round-icon-btn"> <i class="icon_heart_alt"></i></button>
-                            <button class="add-to-cart round-icon-btn">  <i class="icon_bag_alt"></i></button>
+                            <button class="add-to-cart round-icon-btn">  <i class="fa fa-shopping-cart"></i></button>
                             <button class="add-to-compare round-icon-btn"> <i class="fas fa-random"></i></button>
                             <button class="quickview round-icon-btn"> <i class="far fa-eye"></i></button>
                           </div>
@@ -676,7 +676,7 @@
                           </div>
                           <div class="product-select">
                             <button class="add-to-wishlist round-icon-btn"> <i class="icon_heart_alt"></i></button>
-                            <button class="add-to-cart round-icon-btn">  <i class="icon_bag_alt"></i></button>
+                            <button class="add-to-cart round-icon-btn">  <i class="fa fa-shopping-cart"></i></button>
                             <button class="add-to-compare round-icon-btn"> <i class="fas fa-random"></i></button>
                             <button class="quickview round-icon-btn"> <i class="far fa-eye"></i></button>
                           </div>
