--- a/shop_detail_fullwidth.html
+++ b/shop_detail_fullwidth.html
@@ -91,7 +91,7 @@
                 <div class="mobile-menu_logo text-center d-flex justify-content-center align-items-center"><a href=""><img src="assets/images/logo.png" alt=""></a></div>
               </div>
               <div class="col-3">
-                <div class="mobile-product_function d-flex align-items-center justify-content-end"><a class="function-icon icon_heart_alt" href="shop_wishlist.html"></a><a class="function-icon icon_bag_alt" href="shop_cart.html"></a></div>
+                <div class="mobile-product_function d-flex align-items-center justify-content-end"><a class="function-icon icon_heart_alt" href="shop_wishlist.html"></a><a class="function-icon fa fa-shopping-cart" href="shop_cart.html"></a></div>
               </div>
             </div>
           </div>
@@ -165,7 +165,7 @@
               <div class="col-4 col-xl-6 col-xxxl-2 order-xl-2 order-xxxl-4">
                 <div class="product-function d-flex align-items-center justify-content-center justify-content-xl-end">
                   <div id="wishlist"><a class="function-icon icon_heart_alt" href=""></a></div>
-                  <div id="cart"><a class="function-icon icon_bag_alt" href=""><span>NGR 150.00			</span></a></div>
+                  <div id="cart"><a class="function-icon fa fa-shopping-cart" href=""><span>NGR 150.00			</span></a></div>
                 </div>
               </div>
             </div>
@@ -344,7 +344,7 @@
                         </h3>
                         <div class="product-select">
                           <button class="add-to-wishlist round-icon-btn"> <i class="icon_heart_alt"></i></button>
-                          <button class="add-to-cart round-icon-btn">  <i class="icon_bag_alt"></i></button>
+                          <button class="add-to-cart round-icon-btn">  <i class="fa fa-shopping-cart"></i></button>
                           <button class="add-to-compare round-icon-btn"><i class="fas fa-random"></i></button>
                           <button class="quickview round-icon-btn"> <i class="far fa-eye"></i></button>
                         </div>
@@ -359,7 +359,7 @@
                         </h3>
                         <div class="product-select">
                           <button class="add-to-wishlist round-icon-btn"> <i class="icon_heart_alt"></i></button>
-                          <button class="add-to-cart round-icon-btn">  <i class="icon_bag_alt"></i></button>
+                          <button class="add-to-cart round-icon-btn">  <i class="fa fa-shopping-cart"></i></button>
                           <button class="add-to-compare round-icon-btn"><i class="fas fa-random"></i></button>
                           <button class="quickview round-icon-btn"> <i class="far fa-eye"></i></button>
                         </div>
@@ -374,7 +374,7 @@
                         </h3>
                         <div class="product-select">
                           <button class="add-to-wishlist round-icon-btn"> <i class="icon_heart_alt"></i></button>
-                          <button class="add-to-cart round-icon-btn">  <i class="icon_bag_alt"></i></button>
+                          <button class="add-to-cart round-icon-btn">  <i class="fa fa-shopping-cart"></i></button>
                           <button class="add-to-compare round-icon-btn"><i class="fas fa-random"></i></button>
                           <button class="quickview round-icon-btn"> <i class="far fa-eye"></i></button>
                         </div>
@@ -389,7 +389,7 @@
                         </h3>
                         <div class="product-select">
                           <button class="add-to-wishlist round-icon-btn"> <i class="icon_heart_alt"></i></button>
-                          <button class="add-to-cart round-icon-btn">  <i class="icon_bag_alt"></i></button>
+                          <button class="add-to-cart round-icon-btn">  <i class="fa fa-shopping-cart"></i></button>
                           <button class="add-to-compare round-icon-btn"><i class="fas fa-random"></i></button>
                           <button class="quickview round-icon-btn"> <i class="far fa-eye"></i></button>
                         </div>
@@ -404,7 +404,7 @@
                         </h3>
                         <div class="product-select">
                           <button class="add-to-wishlist round-icon-btn"> <i class="icon_heart_alt"></i></button>
-                          <button class="add-to-cart round-icon-btn">  <i class="icon_bag_alt"></i></button>
+                          <button class="add-to-cart round-icon-btn">  <i class="fa fa-shopping-cart"></i></button>
                           <button class="add-to-compare round-icon-btn"><i class="fas fa-random"></i></button>
                           <button class="quickview round-icon-btn"> <i class="far fa-eye"></i></button>
                         </div>
@@ -419,7 +419,7 @@
                         </h3>
                         <div class="product-select">
                           <button class="add-to-wishlist round-icon-btn"> <i class="icon_heart_alt"></i></button>
-                          <button class="add-to-cart round-icon-btn">  <i class="icon_bag_alt"></i></button>
+                          <button class="add-to-cart round-icon-btn">  <i class="fa fa-shopping-cart"></i></button>
                           <button class="add-to-compare round-icon-btn"><i class="fas fa-random"></i></button>
                           <button class="quickview round-icon-btn"> <i class="far fa-eye"></i></button>
                         </div>
