--- a/shop2.html
+++ b/shop2.html
@@ -125,7 +125,7 @@
                 <div class="mobile-menu_logo text-center d-flex justify-content-center align-items-center"><a href=""><img src="assets/images/logo.png" alt=""></a></div>
               </div>
               <div class="col-3">
-                <div class="mobile-product_function d-flex align-items-center justify-content-end"><a class="function-icon icon_heart_alt" href="shop_wishlist.html"></a><a class="function-icon icon_bag_alt" href="shop_cart.html"></a></div>
+                <div class="mobile-product_function d-flex align-items-center justify-content-end"><a class="function-icon icon_heart_alt" href="shop_wishlist.html"></a><a class="function-icon fa fa-shopping-cart" href="shop_cart.html"></a></div>
               </div>
             </div>
           </div>
@@ -326,7 +326,7 @@
                           </div>
                           <div class="product-select">
                             <button class="add-to-wishlist round-icon-btn"> <i class="icon_heart_alt"></i></button>
-                            <button class="add-to-cart round-icon-btn">  <i class="icon_bag_alt"></i></button>
+                            <button class="add-to-cart round-icon-btn">  <i class="fa fa-shopping-cart"></i></button>
                             <button class="add-to-compare round-icon-btn"> <i class="fas fa-random"></i></button>
                             <button class="quickview round-icon-btn"> <i class="far fa-eye"></i></button>
                           </div>
@@ -359,7 +359,7 @@
                           </div>
                           <div class="product-select">
                             <button class="add-to-wishlist round-icon-btn"> <i class="icon_heart_alt"></i></button>
-                            <button class="add-to-cart round-icon-btn">  <i class="icon_bag_alt"></i></button>
+                            <button class="add-to-cart round-icon-btn">  <i class="fa fa-shopping-cart"></i></button>
                             <button class="add-to-compare round-icon-btn"> <i class="fas fa-random"></i></button>
                             <button class="quickview round-icon-btn"> <i class="far fa-eye"></i></button>
                           </div>
@@ -392,7 +392,7 @@
                           </div>
                           <div class="product-select">
                             <button class="add-to-wishlist round-icon-btn"> <i class="icon_heart_alt"></i></button>
-                            <button class="add-to-cart round-icon-btn">  <i class="icon_bag_alt"></i></button>
+                            <button class="add-to-cart round-icon-btn">  <i class="fa fa-shopping-cart"></i></button>
                             <button class="add-to-compare round-icon-btn"> <i class="fas fa-random"></i></button>
                             <button class="quickview round-icon-btn"> <i class="far fa-eye"></i></button>
                           </div>
@@ -423,7 +423,7 @@
                           </div>
                           <div class="product-select">
                             <button class="add-to-wishlist round-icon-btn"> <i class="icon_heart_alt"></i></button>
-                            <button class="add-to-cart round-icon-btn">  <i class="icon_bag_alt"></i></button>
+                            <button class="add-to-cart round-icon-btn">  <i class="fa fa-shopping-cart"></i></button>
                             <button class="add-to-compare round-icon-btn"> <i class="fas fa-random"></i></button>
                             <button class="quickview round-icon-btn"> <i class="far fa-eye"></i></button>
                           </div>
@@ -454,7 +454,7 @@
                           </div>
                           <div class="product-select">
                             <button class="add-to-wishlist round-icon-btn"> <i class="icon_heart_alt"></i></button>
-                            <button class="add-to-cart round-icon-btn">  <i class="icon_bag_alt"></i></button>
+                            <button class="add-to-cart round-icon-btn">  <i class="fa fa-shopping-cart"></i></button>
                             <button class="add-to-compare round-icon-btn"> <i class="fas fa-random"></i></button>
                             <button class="quickview round-icon-btn"> <i class="far fa-eye"></i></button>
                           </div>
@@ -485,7 +485,7 @@
                           </div>
                           <div class="product-select">
                             <button class="add-to-wishlist round-icon-btn"> <i class="icon_heart_alt"></i></button>
-                            <button class="add-to-cart round-icon-btn">  <i class="icon_bag_alt"></i></button>
+                            <button class="add-to-cart round-icon-btn">  <i class="fa fa-shopping-cart"></i></button>
                             <button class="add-to-compare round-icon-btn"> <i class="fas fa-random"></i></button>
                             <button class="quickview round-icon-btn"> <i class="far fa-eye"></i></button>
                           </div>
@@ -516,7 +516,7 @@
                           </div>
                           <div class="product-select">
                             <button class="add-to-wishlist round-icon-btn"> <i class="icon_heart_alt"></i></button>
-                            <button class="add-to-cart round-icon-btn">  <i class="icon_bag_alt"></i></button>
+                            <button class="add-to-cart round-icon-btn">  <i class="fa fa-shopping-cart"></i></button>
                             <button class="add-to-compare round-icon-btn"> <i class="fas fa-random"></i></button>
                             <button class="quickview round-icon-btn"> <i class="far fa-eye"></i></button>
                           </div>
@@ -547,7 +547,7 @@
                           </div>
                           <div class="product-select">
                             <button class="add-to-wishlist round-icon-btn"> <i class="icon_heart_alt"></i></button>
-                            <button class="add-to-cart round-icon-btn">  <i class="icon_bag_alt"></i></button>
+                            <button class="add-to-cart round-icon-btn">  <i class="fa fa-shopping-cart"></i></button>
                             <button class="add-to-compare round-icon-btn"> <i class="fas fa-random"></i></button>
                             <button class="quickview round-icon-btn"> <i class="far fa-eye"></i></button>
                           </div>
@@ -578,7 +578,7 @@
                           </div>
                           <div class="product-select">
                             <button class="add-to-wishlist round-icon-btn"> <i class="icon_heart_alt"></i></button>
-                            <button class="add-to-cart round-icon-btn">  <i class="icon_bag_alt"></i></button>
+                            <button class="add-to-cart round-icon-btn">  <i class="fa fa-shopping-cart"></i></button>
                             <button class="add-to-compare round-icon-btn"> <i class="fas fa-random"></i></button>
                             <button class="quickview round-icon-btn"> <i class="far fa-eye"></i></button>
                           </div>
@@ -609,7 +609,7 @@
                           </div>
                           <div class="product-select">
                             <button class="add-to-wishlist round-icon-btn"> <i class="icon_heart_alt"></i></button>
-                            <button class="add-to-cart round-icon-btn">  <i class="icon_bag_alt"></i></button>
+                            <button class="add-to-cart round-icon-btn">  <i class="fa fa-shopping-cart"></i></button>
                             <button class="add-to-compare round-icon-btn"> <i class="fas fa-random"></i></button>
                             <button class="quickview round-icon-btn"> <i class="far fa-eye"></i></button>
                           </div>
@@ -640,7 +640,7 @@
                           </div>
                           <div class="product-select">
                             <button class="add-to-wishlist round-icon-btn"> <i class="icon_heart_alt"></i></button>
-                            <button class="add-to-cart round-icon-btn">  <i class="icon_bag_alt"></i></button>
+                            <button class="add-to-cart round-icon-btn">  <i class="fa fa-shopping-cart"></i></button>
                             <button class="add-to-compare round-icon-btn"> <i class="fas fa-random"></i></button>
                             <button class="quickview round-icon-btn"> <i class="far fa-eye"></i></button>
                           </div>
@@ -671,7 +671,7 @@
                           </div>
                           <div class="product-select">
                             <button class="add-to-wishlist round-icon-btn"> <i class="icon_heart_alt"></i></button>
-                            <button class="add-to-cart round-icon-btn">  <i class="icon_bag_alt"></i></button>
+                            <button class="add-to-cart round-icon-btn">  <i class="fa fa-shopping-cart"></i></button>
                             <button class="add-to-compare round-icon-btn"> <i class="fas fa-random"></i></button>
                             <button class="quickview round-icon-btn"> <i class="far fa-eye"></i></button>
                           </div>
