--- a/shop_wishlist.html
+++ b/shop_wishlist.html
@@ -80,7 +80,7 @@
               <div class="col-2">
                 <div class="product-function d-flex align-items-center justify-content-end">
                   <div id="wishlist"><a class="function-icon icon_heart_alt" href=""></a></div>
-                  <div id="cart"><a class="function-icon icon_bag_alt" href=""><span>#150.00</span></a></div>
+                  <div id="cart"><a class="function-icon fa fa-shopping-cart" href=""><span>#150.00</span></a></div>
                 </div>
               </div>
             </div>
@@ -130,7 +130,7 @@
                 <div class="mobile-menu_logo text-center d-flex justify-content-center align-items-center"><a href=""><img src="assets/images/logo.png" alt=""></a></div>
               </div>
               <div class="col-3">
-                <div class="mobile-product_function d-flex align-items-center justify-content-end"><a class="function-icon icon_heart_alt" href="shop_wishlist.html"></a><a class="function-icon icon_bag_alt" href="shop_cart.html"></a></div>
+                <div class="mobile-product_function d-flex align-items-center justify-content-end"><a class="function-icon icon_heart_alt" href="shop_wishlist.html"></a><a class="function-icon fa fa-shopping-cart" href="shop_cart.html"></a></div>
               </div>
             </div>
           </div>
