integrating user registration API

--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
                 <div id="root" class="product-item  d-flex flex-wrap">
 
                 </div>
-
+                  height="500" width="500">
 
 
 
