--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
 
                 <div id="tab-1">
 
-                <div id="root" class="product-item  d-flex flex-wrap">
+                <div id="root" class="product-item  d-flex flex-wrap align-items-center justify-content-center">
 
                 </div>
                 
