integrating user registration API

--- a/shop4.html
+++ b/shop4.html
@@ -306,7 +306,7 @@
                     <!--Using column-->
                   </div>
                   <div class="shop-products_bottom">              
-                        <div id="root6" class="product-item  d-flex flex-wrap">
+                        <div id="root6" class="product-item  d-flex flex-wrap align-items-center justify-content-center">
 
 
                         </div>
