integrating user registration API

--- a/index.html
+++ b/index.html
@@ -1088,10 +1088,11 @@
       </div>
       <!-- End feature-products-->
   
-
+    
 
       <div class="items-category">
           <div class="container">
+          <h5 class="title align-items-center justify-content-center">Product Categories</h5>
 
 
 
