integrating user registration API

--- a/index.html
+++ b/index.html
@@ -1092,7 +1092,7 @@
 
       <div class="items-category">
           <div class="container">
-          <h5 class="title align-items-center justify-content-center">Product Categories</h5>
+          <h4 class="title mx-auto">Product Categories</h4>
 
 
 
