--- a/shop.html
+++ b/shop.html
@@ -310,11 +310,10 @@
                     <!--Using column-->
                   </div>
                   <div class="shop-products_bottom">              
-                      <div class="col-6 col-md-4">
-                        <div id="root2" class="product-item  d-flex flex-wrap">
+                    <div id="root2" class="product-item  d-flex flex-wrap align-items-center justify-content-center">
 
 
-                        </div>
+                    </div>
                         <!--<div class="product">
                           <div class="product-img_block"><a class="product-img" href="shop_detail_fullwidth.html"><img src="assets/images/product/product01.png" alt=""></a>
                             <button class="quickview no-round-btn smooth">Quick view</button>
