integrating user registration API

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                   <div class="col-12 col-md-4">
                     <div class="benefit-detail d-flex flex-column align-items-center"><img class="benefit-img" src="assets/images/homepage01/benefit-icon1.png" alt="">
                       <h5 class="benefit-title">Free Shipping</h5>
-                      <p class="benefit-describle">For all order over 99#</p>
+                      <p class="benefit-describle">For all order over NGR 100,000</p>
                     </div>
                   </div>
                   <div class="col-12 col-md-4">
@@ -339,26 +339,7 @@
             </div>
             <div class="col-12">
               <div id="tab">
-                <ul class="tab-control">
-                  <li><a class="active" href="#tab-1">All</a></li>
-                  <li><a href="#tab-2">MEAT & FISH</a></li>
-                  <li> <a href="#tab-3">BEVERAGES TEAS</a></li>
-                  <li><a href="#tab-4">CEREAL</a></li>
-                  <li><a href="#tab-5">BAKING INGREDIENTS</a></li>
-                  <li><a href="#tab-5">SPICES</a></li>
-                  <li><a href="#tab-5">VEGETABLES & LEAFY</a></li>
-                  <li><a href="#tab-5">TUBBERS</a></li>
-                  <li><a href="#tab-5">FLOUR</a></li>
-                  <li><a href="#tab-5">GRAINS</a></li>
-                  <li><a href="#tab-5">FRUITS</a></li>
-                  <li><a href="#tab-5">OILS</a></li>
-                  <li><a href="#tab-5">NUTS</a></li>
 
-
-
-
-                  
-                </ul>
 
 
 
