integrating user registration API

--- a/shop.html
+++ b/shop.html
@@ -277,7 +277,22 @@
                     <h2 class="title">Product tag</h2>
                   </div>
                  
-                  <div class="tag_bottom"><a class="tag-btn" href="shop.html">organic</a><a class="tag-btn" href="shop.html">vegatable</a><a class="tag-btn" href="shop.html">fruits</a><a class="tag-btn" href="shop.html">fresh meat</a><a class="tag-btn" href="shop.html">fastfood</a><a class="tag-btn" href="shop.html">natural</a></div>
+                  <div class="tag_bottom">
+                  <a class="tag-btn" href="shop.html">MEAT & FISH</a>
+                  <a class="tag-btn" href="shop.html">BEVERAGES TEAS</a>
+                  <a class="tag-btn" href="shop.html">CEREAL</a>
+                  <a class="tag-btn" href="shop.html">BAKING INGREDIENTS</a>
+                  <a class="tag-btn" href="shop.html">SPICES</a>
+                  <a class="tag-btn" href="shop.html">VEGETABLES & LEAFY</a>
+                  <a class="tag-btn" href="shop.html">TUBBERS</a>
+                  <a class="tag-btn" href="shop.html">FLOUR</a>
+                  <a class="tag-btn" href="shop.html">GRAINS</a>
+                  <a class="tag-btn" href="shop.html">Oatmeal</a>
+                  <a class="tag-btn" href="shop.html">FRUITS</a>
+                  <a class="tag-btn" href="shop.html">OILS</a>
+                  <a class="tag-btn" href="shop.html">NUTS</a>
+                  
+                  </div>
                 </div>
               </div>
 
