integrating user registration API

--- a/register.html
+++ b/register.html
@@ -73,10 +73,6 @@
                 </div>
               </div>
               <div class="col-2">
-                <div class="product-function d-flex align-items-center justify-content-end">
-                  <div id="wishlist"><a class="function-icon icon_heart_alt" href=""></a></div>
-                  <div id="cart"><a class="function-icon icon_bag_alt" href=""><span>#150.00</span></a></div>
-                </div>
               </div>
             </div>
           </div>
@@ -85,7 +81,7 @@
           <div class="container">
             <div class="row">
               <div class="col-3">
-                <div class="mobile-menu_block d-flex align-items-center"><a class="mobile-menu--control" href="javascript:void()"><i class="fas fa-bars"></i></a>
+                <div class="mobile-menu_block d-flex align-items-center"><a class="mobile-menu--control" href="index.html"><i class="fas fa-bars"></i></a>
                   <div id="ogami-mobile-menu">
                     <button class="no-round-btn" id="mobile-menu--closebtn">Close menu</button>
                     <div class="mobile-menu_items">
@@ -122,9 +118,7 @@
               <div class="col-6">
                 <div class="mobile-menu_logo text-center d-flex justify-content-center align-items-center"><a href=""><img src="assets/images/logo.png" alt=""></a></div>
               </div>
-              <div class="col-3">
-                <div class="mobile-product_function d-flex align-items-center justify-content-end"><a class="function-icon icon_heart_alt" href="shop_wishlist.html"></a><a class="function-icon icon_bag_alt" href="shop_shop_cart.html"></a></div>
-              </div>
+              
             </div>
           </div>
         </div>
