--- a/Homepage.html
+++ b/Homepage.html
@@ -44,7 +44,7 @@
                 <div class="header-right d-flex flex-column flex-md-row justify-content-md-end justify-content-center align-items-center">
                   <div class="social-link d-flex"><a href=""><i class="fab fa-facebook-f"> </i></a><a href=""><i class="fab fa-twitter"></i></a><a href=""><i class="fab fa-invision"> </i></a><a href=""><i class="fab fa-pinterest-p"> </i></a></div>
                  
-                  <div class="login d-flex" id="loginflex"><a href="login.html"><i class="fas fa-user"></i>Login or Sign Up</a></div>
+                  <div class="login d-flex" id="loginflex"><a href="login.html"><i class="fas fa-user"></i>Logout</a></div>
                 </div>
               </div>
             </div>
@@ -117,7 +117,7 @@
                       </ul>
                     </div>
                     <div class="mobile-login" id="mobilelogin">
-                      <h2>My account</h2><a href="login.html">Login</a><a href="register.html">Register</a>
+                      <h2>My account</h2><a href="login.html">Logout</a>
                     </div>
                     <div class="mobile-social"><a href=""><i class="fab fa-facebook-f"> </i></a><a href=""><i class="fab fa-twitter"></i></a><a href=""><i class="fab fa-invision"> </i></a><a href=""><i class="fab fa-pinterest-p"> </i></a></div>
                   </div>
@@ -128,7 +128,7 @@
                 <div class="mobile-menu_logo text-center d-flex justify-content-center align-items-center"><a href=""><img src="assets/images/logo.png" alt=""></a></div>
               </div>
               <div class="col-3">
-                <div class="mobile-product_function d-flex align-items-center justify-content-end"><a class="function-icon icon_heart_alt" href="javascript:void()"></a><a class="function-icon fa fa-shopping-cart" href="javascript:void()"></a></div>
+                <div class="mobile-product_function d-flex align-items-center justify-content-end"><a class="function-icon icon_heart_alt" href="shop_wishlist.html"></a><a class="function-icon fa fa-shopping-cart" href="shop_cart.html"></a></div>
                 <!--shop_shop_cart.html-->
               </div>
             </div>
