--- a/login.html
+++ b/login.html
@@ -39,7 +39,7 @@
                 <div class="header-right d-flex flex-column flex-md-row justify-content-md-end justify-content-center align-items-center">
                   <div class="social-link d-flex"><a href=""><i class="fab fa-facebook-f"> </i></a><a href=""><i class="fab fa-twitter"></i></a><a href=""><i class="fab fa-invision"> </i></a><a href=""><i class="fab fa-pinterest-p"> </i></a></div>
                 
-                  <div class="login d-flex"><a href="login.html"><i class="fas fa-user"></i>Login</a></div>
+                  <div class="login d-flex"><a href="register.html"><i class="fas fa-user"></i>SignUp</a></div>
                 </div>
               </div>
             </div>
@@ -96,7 +96,7 @@
           <div class="container">
             <div class="row">
               <div class="col-3">
-                <div class="mobile-menu_block d-flex align-items-center"><a class="mobile-menu--control" href="javascript:void()"><i class="fas fa-bars"></i></a>
+                <div class="mobile-menu_block d-flex align-items-center"><a class="mobile-menu--control" href="index.html"><i class="fas fa-bars"></i></a>
                   <div id="ogami-mobile-menu">
                     <button class="no-round-btn" id="mobile-menu--closebtn">Close menu</button>
                     <div class="mobile-menu_items">
@@ -120,7 +120,7 @@
                       </ul>
                     </div>
                     <div class="mobile-login">
-                      <h2>My account</h2><a href="login.html">Login</a><a href="register.html">Register</a>
+                      <h2>My account</h2><a href="register.html">SignUp</a><a href="register.html">Register</a>
                     </div>
                     <div class="mobile-social"><a href=""><i class="fab fa-facebook-f"> </i></a><a href=""><i class="fab fa-twitter"></i></a><a href=""><i class="fab fa-invision"> </i></a><a href=""><i class="fab fa-pinterest-p"> </i></a></div>
                   </div>
@@ -131,7 +131,6 @@
                 <div class="mobile-menu_logo text-center d-flex justify-content-center align-items-center"><a href=""><img src="assets/images/logo.png" alt=""></a></div>
               </div>
               <div class="col-3">
-                <div class="mobile-product_function d-flex align-items-center justify-content-end"><a class="function-icon icon_heart_alt" href="wishlist.html"></a><a class="function-icon fa fa-shopping-cart" href="shop_cart.html"></a></div>
               </div>
             </div>
           </div>
