integrating user registration API

--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
               </div>
               <div class="col-2">
                 <div class="product-function d-flex align-items-center justify-content-end">
-                  <div id="wishlist"><a class="function-icon icon_heart_alt" href=""></a></div>
-                  <div id="cart"><a class="function-icon fa fa-shopping-cart" href=""><span>Welcome</span></a></div>
+                  <div id="wishlist"><a class="function-icon icon_heart_alt" href="javascript:void()"></a></div>
+                  <div id="cart"><a class="function-icon fa fa-shopping-cart" href="javascript:void()"><span>Welcome</span></a></div>
                 </div>
               </div>
             </div>
