integrating user registration API

--- a/index.html
+++ b/index.html
@@ -271,20 +271,19 @@
       <!-- End slider-->
       
 
-      <div class="feature-products">
-        <div class="container">
-          <div class="row">
-            <div class="col-12 text-center">
-              <h1 class="title mx-auto">Featured Product</h1>
-            </div>
-            <div class="col-12">
-              <div id="tab">
 
-
-
-
-                </div>
-
+                <div class="feature-products">
+                  <div class="container">
+                    <div class="row">
+                      <div class="col-12 text-center">
+                      
+                      </div>
+                      <div class="col-12">
+                        <h1 class="title">Featured Product</h1>
+                        <div class="container">
+                        <h4 class="title mx-auto text-center">Featured Product</h4>
+                        </div>
+                        </div>
 
 
                 <div id="tab-1">
