--- a/index.html
+++ b/index.html
@@ -301,23 +301,14 @@
     </div>
     <!-- End slider-->
 
-    <div class="feature-products">
+    <div class="feature-products feature-products_v2">
       <div class="container">
         <div class="row">
           <div class="col-12 text-center">
-
+            <h1 class="title mx-auto">Featured Products</h1>
           </div>
-          <div class="col-12">
-            <h1 class="title">Featured Product</h1>
-            <div class="container">
-              <h4 class="title mx-auto text-center">Featured Product</h4>
-            </div>
-          </div>
-
           <div id="tab-1">
-            <div id="root" class="product-item  d-flex flex-wrap align-items-center justify-content-center">
-
-            </div>
+            <div id="root" class="product-item  d-flex flex-wrap align-items-center justify-content-center"></div>
           </div>
         </div>
       </div>
