--- a/index.html
+++ b/index.html
@@ -309,7 +309,8 @@
             <h1 class="title mx-auto">Featured Products</h1>
           </div>
           <div id="tab-1">
-            <div id="root" class="product-item  d-flex flex-wrap align-items-center justify-content-center"></div>
+            <div id="featuredProducts" class="product-item  d-flex flex-wrap align-items-center justify-content-center">
+            </div>
           </div>
         </div>
       </div>
