Update: add featureProduct service to index.html

--- a/index.html
+++ b/index.html
@@ -544,6 +544,9 @@
   <script src="assets/js/main.js"></script>
   <script type="text/javascript" src="assets/js/login.js"></script>
   <script type="text/javascript" src="assets/js/foodlist.js"></script>
+
+  <!-- Services -->
+  <script src="js/services/featuredProducts.js"></script>
 </body>
 
 </html>
