Update: add config/constants.js to index.html

--- a/index.html
+++ b/index.html
@@ -545,6 +545,9 @@
   <script type="text/javascript" src="assets/js/login.js"></script>
   <script type="text/javascript" src="assets/js/foodlist.js"></script>
 
+  <!--Config -->
+  <script src="config/constants.js"></script>
+
   <!-- Services -->
   <script src="js/services/featuredProducts.js"></script>
 </body>
