UPDATE: add api-request to index.html

--- a/index.html
+++ b/index.html
@@ -548,6 +548,9 @@
   <!--Config -->
   <script src="config/constants.js"></script>
 
+  <!-- Utils -->
+  <script src="js/utils/api-request.js"></script>
+
   <!-- Services -->
   <script src="js/services/featuredProducts.js"></script>
 </body>
