UPDATE: commented out foodlist.js

--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@
   <script src="assets/js/vanilla-tilt.min.js"></script>
   <script src="assets/js/main.js"></script>
   <script type="text/javascript" src="assets/js/login.js"></script>
-  <script type="text/javascript" src="assets/js/foodlist.js"></script>
+  <!-- <script type="text/javascript" src="assets/js/foodlist.js"></script> -->
 
   <!--Config -->
   <script src="config/constants.js"></script>
