--- a/contact_us.html
+++ b/contact_us.html
@@ -54,7 +54,7 @@
               <div class="col-2">
                 <div class="product-function d-flex align-items-center justify-content-end">
                   <div id="wishlist"><a class="function-icon icon_heart_alt" href=""></a></div>
-                  <div id="cart"><a class="function-icon fa fa-shopping-cart" href=""><span>#150.00</span></a></div>
+                  <div id="cart"><a class="function-icon fa fa-shopping-cart" href=""><span></span></a></div>
                 </div>
               </div>
             </div>
@@ -64,7 +64,7 @@
           <div class="container">
             <div class="row">
               <div class="col-3">
-                <div class="mobile-menu_block d-flex align-items-center"><a class="mobile-menu--control" href="javascript:void()"><i class="fas fa-bars"></i></a>
+                <div class="mobile-menu_block d-flex align-items-center"><a class="mobile-menu--control" href="index.html"><i class="fas fa-bars"></i></a>
                   <div id="ogami-mobile-menu">
                     <button class="no-round-btn" id="mobile-menu--closebtn">Close menu</button>
                     <div class="mobile-menu_items">
