--- a/checkout.html
+++ b/checkout.html
@@ -12,7 +12,7 @@
 
 <div id="site">
 	<header id="masthead">
-		<h1>IntrioBasket<span class="tagline">Wines for web developers since 1999</h1>
+		<h1>IntrioBasket</h1>
 	</header>
 	<div id="content">
 		<h1>Checkout</h1>
